# crs-c500c-utils

./: LICENSE.rst  README.rst  apt-package-list
cros_system_bin/: hcl  hcl.ungz  joint  joint.ungz  kernel  r3interp  rc1  robotsrv  robotsrv.ungz  stpv3
crs_f3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
crs_f3_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kuka_kr3.srdf  ompl_planning.yaml  ros_controllers.yaml
crs_f3_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  (+13 more)
crs_f3_robot_interface/: CMakeLists.txt  package.xml
doc/: BatteryChange.rst  Notes.rst  Serial.rst  bootmsg.rst  robotsrv_disas.rst
file_transfer/: bootloader_download.py  filetransfer_netcat.sh  filetransfer_screen.sh  uudecode.r3  uuencode.r3
ros_launch/: thermo_crs_f3.launch
rosserial_cros/: CMakeLists.txt  Makefile  package.xml  rosserial_packets.r3  rosserial_test.r3  setup.py
rosserial_cros/cros_app/: Makefile  main.r3  rosmsg.r3  rosserial.r3
rosserial_cros/src/ros_lib/: rosmsg.r3
rosserial_cros/src/rosserial_cros/: make_libraries.py  make_library.py
rosserial_cros/tmp/: rosserial_packets.r3  rosserial_test.r3
serial_port_server/: cros_console.service  cros_shutdown.service  ros.service  serial_port_server.py
simple_message/: Makefile  robot_control_server.r3  robot_status_server.r3  serial_framing.r3
syntax_hilight/: rapl-3.lang
tests/: getrotspd.r3  logi.txt  pipesize.r3
trajectory/: simple_test.r3
(+3 files in other folders)
